# text2sql

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/text2sql/: __init__.py  cli.py
src/text2sql/agents/: __init__.py  sql_agent.py  summarization_agent.py
src/text2sql/core/: __init__.py  app.py  config.py  logging.py
src/text2sql/models/: __init__.py  schemas.py
src/text2sql/services/: __init__.py  database_service.py  llm_service.py  redis_service.py  session_service.py
src/text2sql/utils/: __init__.py  db_utils.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_database_service.py  test_session_service.py  test_summarization_agent.py
